--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.3.49",
+    "@clerk/nextjs": "^6.12.0",
+    "axios": "^1.7.9",
+    "next": "15.1.7",
+    "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
+    "querystring": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/spotify-web-api-node": "^5.0.11",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
