--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-SPOTIFY_CLIENT_ID={client_id}
-SPOTIFY_CLIENT_SECRET={client_secret}
-SPOTIFY_REFRESH_TOKEN={refresh_token}
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
