--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@clerk/express": "^1.3.49",
     "@clerk/nextjs": "^6.12.0",
     "axios": "^1.7.9",
-    "next": "15.1.7",
+    "next": "^15.5.6",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "querystring": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^6.1.15"
   },
